--- a/src/components/landing/style.scss
+++ b/src/components/landing/style.scss
@@ -42,7 +42,6 @@
     &-banner {
       padding: 0;
       white-space: normal;
-      background-size: contain;
 
       &-content {
         display: block;
